# bzldiff

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
src/: main.rs
